// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChartTransformation > Legend config > should be always disabled for single series and push this info out 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "colors": {
          "colorAssignments": [
            {
              "color": {
                "type": "guid",
                "value": "1",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "$#,##0.00",
                  "identifier": "aangOxLSeztu",
                  "localIdentifier": "m_aangOxLSeztu",
                  "name": "Amount",
                  "ref": {
                    "uri": "/gdc/md/referenceworkspace/obj/1271",
                  },
                  "uri": "/gdc/md/referenceworkspace/obj/1271",
                },
              },
            },
          ],
          "colorPalette": undefined,
        },
        "propertiesMeta": {
          "legend_enabled": false,
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ChartTransformation > Legend config > should be enabled & on the top by default and push this info out 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "colors": {
          "colorAssignments": [
            {
              "color": {
                "type": "guid",
                "value": "1",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "$#,##0.00",
                  "identifier": "aangOxLSeztu",
                  "localIdentifier": "m_aangOxLSeztu",
                  "name": "Amount",
                  "ref": {
                    "uri": "/gdc/md/referenceworkspace/obj/1271",
                  },
                  "uri": "/gdc/md/referenceworkspace/obj/1271",
                },
              },
            },
            {
              "color": {
                "type": "guid",
                "value": "2",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "$#,##0.00",
                  "identifier": "acugFHNJgsBy",
                  "localIdentifier": "m_acugFHNJgsBy",
                  "name": "Won",
                  "ref": {
                    "uri": "/gdc/md/referenceworkspace/obj/1272",
                  },
                  "uri": "/gdc/md/referenceworkspace/obj/1272",
                },
              },
            },
            {
              "color": {
                "type": "guid",
                "value": "3",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "#,##0.00",
                  "localIdentifier": "m_358184a8_f72796b0fbc7c0dc4d17a1e68c1a9933",
                  "name": "Calculated 'Lost' measure",
                  "ref": undefined,
                },
              },
            },
            {
              "color": {
                "type": "guid",
                "value": "4",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "#,##0.00",
                  "localIdentifier": "m_7ff816a7_476594e1d138bbf91ab5a7523beacd96",
                  "name": "Ratio of Won and Lost",
                  "ref": undefined,
                },
              },
            },
          ],
          "colorPalette": undefined,
        },
        "propertiesMeta": {
          "legend_enabled": true,
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
